# DOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Editor+Engine/: CMakeLists.txt  import_export.h
Editor+Engine/AI_Sample/: AILink.h  AI_Sample.cpp  Entity.h  HelperFunctions.h  ReadMe.txt  World.h
Editor+Engine/AI_Sample/Lib/: Utility.h
Editor+Engine/Debug/: temp.xml
Editor+Engine/Win32/: qcustomplot.h
Editor+Engine/qtLinker/: GradEditor.cpp  GraphicsViewEditor.cpp  GraphicsViewEditor.h  GridEditor.cpp  GridEditor.h  Inheritance.h  MainWindow.cpp  ObjectEditor.cpp  ObjectEditor.h  SliderBoxWidget.cpp  TextBoxWidget.cpp  TreeItem.cpp  TreeItem.h  TreeView.cpp  TreeViewEntity.cpp  TreeWidget.cpp  TreeWidget.h  WriteXML.h  main.cpp  qtLinker.pro  qtlinker.qrc  runner.cpp  runner.h
Indev-Alpha/: CMakeLists.txt  Readme.md
Indev-Alpha/DOT_Alpha/: CMakeLists.txt  DOT_Alpha.cbp  DOT_Alpha.vcxproj  DOT_Alpha.vcxproj.filters
Indev-Alpha/DOT_Alpha/DOTbuilder/: CMakeLists.txt  InterfaceBuilder.cpp  InterfaceBuilder.h
Indev-Alpha/DOT_Alpha/Interface/: AdvertisementBase.h  CMakeLists.txt  EntityBase.cpp  EntityBase.h  InterfaceBase.h  TObject.h  TagBase.h
Indev-Alpha/DOT_Alpha/Interface/tests/: CMakeLists.txt
Indev-Alpha/DOT_Alpha/Managers/: BranchPredictor.h  CMakeLists.txt  DOT_Py.h  PythonBinding.h  World.cpp  World.h
Indev-Alpha/DOT_Alpha/Managers/tests/: CMakeLists.txt  world_tests.cpp
Indev-Alpha/DOT_Alpha/MathUtility/: Sigmoid.h
Indev-Alpha/TestingGrounds/: CMakeLists.txt  TestingGrounds.cpp  TestingGrounds.vcxproj
Indev-Alpha/UE4Plugin/DOTPlugin/: DOTPlugin.uplugin
Indev-Alpha/UE4Plugin/DOTPlugin/Source/DOTPlugin/Private/: Advertisement.cpp  Advertisement.h  AdvertisementInferface.h  DOTPlugin.cpp  DOTWorld.cpp  Entity.cpp  Entity.h  HelperFunction.h
Indev-Alpha/ZETA_Alpha/: CMakeLists.txt
Indev-Alpha/ZETA_Alpha/Containers/: CMakeLists.txt  Containers.h  GenericContainer.h  NibbleContainer.h  Node.h  SearchTree.h  TemplateTreeAddress.h  generic_typedefs.h
Indev-Alpha/ZETA_Alpha/Containers/tests/: CMakeLists.txt  basic_tests.cpp
Indev-Alpha/ZETA_Alpha/Manager/: SearchTreeManager.h  ThreadManager.h
Indev-Alpha/ZETA_Alpha/Processing/: CMakeLists.txt  ProcessBase.h
Indev-Alpha/ZETA_Alpha/Utility/: Workarounds.h
UE4Plugin/DOTPlugin/: DOTPlugin.uplugin  Readme.md
UE4Plugin/DOTPlugin/Source/DOTPlugin/: DOTPlugin.Build.cs
UE4Plugin/DOTPlugin/Source/DOTPlugin/Private/: AdvertisementInferface.cpp  DOTAdvertisement.cpp  DOTAdvertisement.h  DOTBrainComponent.cpp  DOTBrainComponent.h  DOTPluginPrivatePCH.h  DOTWorld.h
UE4Plugin/DOTPlugin/Source/DOTPlugin/Public/: IDOTPlugin.h
