include_directories(AI_Sample)
set(SRC
qtLinker/GradEditor.cpp
qtLinker/GraphicsViewEditor.cpp
qtLinker/GridEditor.cpp
qtLinker/main.cpp
qtLinker/MainWindow.cpp
qtLinker/ObjectEditor.cpp
qtLinker/qpiemenu.cpp
qtLinker/qtlinker.cpp
qtLinker/runner.cpp
qtLinker/SliderBoxWidget.cpp
qtLinker/TextBoxWidget.cpp
qtLinker/TreeItem.cpp
qtLinker/TreeView.cpp
qtLinker/TreeViewEntity.cpp
qtLinker/TreeWidget.cpp
Win32/qcustomplot.cpp
Win32/sidebar.cpp
AI_Sample/AI_Sample.cpp
)
set(INCLUDES
qtLinker/GradEditor.h
qtLinker/GridEditor.h
qtLinker/GridScene.h
qtLinker/Inheritance.h
qtLinker/Itter.h
qtLinker/MainWindow.h
qtLinker/ObjectEditor.h
qtLinker/qpiemenu.h
qtLinker/qtlinker.h
qtLinker/runner.h
qtLinker/SliderBoxWidget.h
qtLinker/TextBoxWidget.h
qtLinker/TreeItem.h
qtLinker/TreeViewEntity.h
qtLinker/TreeView.h
qtLinker/TreeWidget.h
qtLinker/WriteXML.h
Win32/qcustomplot.h
Win32/sidebar.h
)
set(gui_UI_FILES
qtLinker/qtlinker.ui
)
qt5_add_resources(DOT_resources  qtLinker/qtlinker.qrc)
QT5_WRAP_UI(gui_UI_SRC ${gui_UI_FILES})
add_executable(DOT_editor ${SRC} ${INCLUDES} ${gui_UI_SRC} ${DOT_resources})
qt5_use_modules(DOT_editor Core Widgets Concurrent PrintSupport)
